# VINS-mono

./: .gitignore  CMakeLists.txt  README.md
config/: config.yaml  custom.yaml  euroc_config.yaml  uzh_config.yaml  vins_result.csv
dependencies/: ceres_installation.sh  pangolin_installation.sh
src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
src/camera_model/src/calib/: CameraCalibration.cc
src/camera_model/src/chessboard/: Chessboard.cc
src/factor/: imu_factor.h  integration_base.h  marginalization_factor.h  pose_local_parameterization.h  projection_factor.h
src/feature_tracker/: feature_tracker.h
src/initial/: initial_alignment.h  initial_ex_rotation.h
src/loop-closure/: DLoopDetector.h  TemplatedLoopDetector.h  demoDetector.h  keyframe.h  keyframe_database.h  loop_closure.h
src/parser/: dataset_factory.cpp  dataset_factory.h  dataset_parser.h  euroc_parser.cpp  simulation_parser.cpp  tumvi_parser.cpp  uzh_parser.cpp
src/rosmsg_headers/rosmsg/: PointStamped.h
src/utility/: visualization.h
